--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # hostname (and path) to the root eg. http://spf13.com/
-baseurl = "http://www.example.com"
+baseurl = "http://www.bestcameranews.com"
 
 # Site title
 title = "sitename"
